@@ -1,6 +1,6 @@
-# Copyright 1999-2014 Gentoo Foundation
+# Copyright 1999-2015 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/sys-apps/gptfdisk/gptfdisk-0.8.8.ebuild,v 1.9 2014/03/19 13:47:58 ago Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-apps/gptfdisk/gptfdisk-1.0.0.ebuild,v 1.1 2015/04/16 10:07:18 polynomial-c Exp $
 
 EAPI=5
 
@@ -12,12 +12,11 @@ SRC_URI="mirror://sourceforge/${PN}/${P}.tar.gz"
 
 LICENSE="GPL-2"
 SLOT="0"
-KEYWORDS="alpha amd64 arm ia64 ~mips ppc ppc64 sparc x86 ~amd64-linux ~arm-linux ~x86-linux"
-IUSE="+icu kernel_linux ncurses static"
+KEYWORDS="~alpha ~amd64 ~arm ~arm64 ~ia64 ~mips ~ppc ~ppc64 ~sparc ~x86 ~amd64-linux ~arm-linux ~x86-linux"
+IUSE="kernel_linux ncurses static"
 
 LIB_DEPEND="dev-libs/popt[static-libs(+)]
 	ncurses? ( >=sys-libs/ncurses-5.7-r7[static-libs(+)] )
-	icu? ( dev-libs/icu:=[static-libs(+)] )
 	kernel_linux? ( sys-apps/util-linux[static-libs(+)] )" # libuuid
 RDEPEND="!static? ( ${LIB_DEPEND//\[static-libs(+)]} )"
 DEPEND="${RDEPEND}
@@ -27,16 +26,6 @@ DEPEND="${RDEPEND}
 src_prepare() {
 	tc-export CXX PKG_CONFIG
 
-	if use icu; then
-		append-cxxflags $(${PKG_CONFIG} --variable=CXXFLAGS icu-io icu-uc)
-	else
-		sed \
-			-e 's:-licuio::g' \
-			-e 's:-licuuc::g' \
-			-e 's:-D USE_UTF16::g' \
-			-i Makefile || die
-	fi
-
 	if ! use ncurses; then
 		sed -i \
 			-e '/^all:/s:cgdisk::' \
@@ -45,7 +34,7 @@ src_prepare() {
 
 	sed \
 		-e '/g++/s:=:?=:g' \
-		-e "s:-lncurses:$(${PKG_CONFIG} --libs ncurses):g" \
+		-e 's:-lncursesw:$(shell $(PKG_CONFIG) --libs ncursesw):g' \
 		-i Makefile || die
 
 	use static && append-ldflags -static
