@@ -1,6 +1,12 @@
 # ChangeLog for sys-apps/gptfdisk
 # Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-apps/gptfdisk/ChangeLog,v 1.56 2015/04/07 14:45:39 jlec Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-apps/gptfdisk/ChangeLog,v 1.57 2015/04/16 10:07:18 polynomial-c Exp $
+
+*gptfdisk-1.0.0 (16 Apr 2015)
+
+  16 Apr 2015; Lars Wendler <polynomial-c@gentoo.org> -gptfdisk-0.8.8.ebuild,
+  +gptfdisk-1.0.0.ebuild:
+  Version bump. Removed old.
 
   03 Mar 2015; Yixun Lan <dlan@gentoo.org> gptfdisk-0.8.10.ebuild:
   add arm64 support, tested on A53 board
